Add hp plug and more groups.

--- a/shelly-base.yaml
+++ b/shelly-base.yaml
@@ -2,12 +2,7 @@
 
 $schema: https://toit.io/schemas/artemis/pod-specification/v1.json
 name: shelly-light
-sdk-version: v2.0.0-alpha.163
-artemis-version: v0.25.0
+extends: [home-base.yaml]
 max-offline: 0s
 firmware-envelope: esp32-ota-1c0000
-connections:
-  - type: wifi
-    ssid: @SHELLY_LIGHT_WLAN_SSID@
-    password: @SHELLY_LIGHT_WLAN_PW@
-containers: {}
+
